courses/430_programming-languages/assignment-6/tests/error/hw5_error03.nex
var x : none;
  fun j(b:bool):none
  {
  }
print "should not get here:n";
1 / 0;
   x = j(true > 3);
